--- a/mandelbulber2/qt/dock_effects.ui
+++ b/mandelbulber2/qt/dock_effects.ui
@@ -1035,8 +1035,8 @@ per pixel:</string>
               <item>
                <widget class="QLabel" name="label_5">
                 <property name="text">
-                 <string>Remark: It is simple reflections mapping which works only in CPU mode (OpenCL disabled).
- To do mapping of radiance or high dynamic reflections use HDRI texture as a background texture.</string>
+                 <string>Remark: It is simple reflections mapping.
+To do mapping of radiance use HDRI texture as a background texture.</string>
                 </property>
                 <property name="wordWrap">
                  <bool>true</bool>
@@ -1167,8 +1167,8 @@ per pixel:</string>
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>551</width>
-            <height>1410</height>
+            <width>267</width>
+            <height>1425</height>
            </rect>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_35">
@@ -2486,8 +2486,8 @@ Set 100 to keep compatibility with version &lt;=2.12</string>
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>569</width>
-            <height>1078</height>
+            <width>272</width>
+            <height>381</height>
            </rect>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_36">
@@ -3163,7 +3163,7 @@ Set 100 to keep compatibility with version &lt;=2.12</string>
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>551</width>
+            <width>287</width>
             <height>1092</height>
            </rect>
           </property>
@@ -4193,8 +4193,8 @@ from fractal:</string>
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>569</width>
-            <height>1070</height>
+            <width>165</width>
+            <height>110</height>
            </rect>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_3">
